parameterized project name in template rendering
E.g., made it easier to switch from APOLLO-AF to APOLLO-HF

--- a/apollo_flask/templates/index.html
+++ b/apollo_flask/templates/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 
         <div class="content" style="text-align: center">
-            <p>Welcome to APOLLO-AF. </br>
+            <p>Welcome to {{ project_name }}. </br>
 		<A href="oauth/garmin/consent">Authorize Garmin Connect </A><br>
 		<A href="privacy.html">Privacy Policy</A></p>
            <div class="logos">
