--- a/apollo_flask/templates/privacy.html
+++ b/apollo_flask/templates/privacy.html
@@ -1,12 +1,12 @@
  <!DOCTYPE html>
 <html>
 <head>
-<title>Apollo-Test Privacy Policy</title>
+<title>{{ project_name }} Privacy Policy</title>
 </head>
 <body>
 
-<h1>Apollo-Test Privacy Policy</h1>
-<p>This document is a place-holder for the Apollo privacy policy. The project is currently closed to development staff only. No outside user data will be collected, stored, or shared without prior consent.</p>
+<h1>{{ project_name }} Privacy Policy</h1>
+<p>This document is a place-holder for the {{ project_name }} privacy policy. The project is currently closed to development staff only. No outside user data will be collected, stored, or shared without prior consent.</p>
 
 </body>
 </html> 
