--- a/apollo_flask/templates/base.html
+++ b/apollo_flask/templates/base.html
@@ -5,7 +5,7 @@
         {% if title %}
         <title>{{ title }}</title>
         {% else %}
-        <title> APOLLO </title>
+        <title>{{ project_name }} </title>
         {% endif %}
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <style type="text/css">
@@ -77,7 +77,7 @@
         </style>
     </head>
     <body>
-    <h1>APOLLO</br> 
+    <h1>{{ project_name }}</br> 
     </h1>
     {% block content %}{% endblock %}                   
     <div class=logos>
